Compiler/tests/typing/bad/testfile-undef_struct-1.rs
fn main() { let x = S { a: 42 }; }
